--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,19 @@ jobs:
     
     - name: Run tests
       run: |
-        python -m pytest tests/ -v --cov=src --cov-report=xml --cov-report=term
+        python -m pytest tests/ -v
+    
+    - name: Generate coverage report
+      run: |
+        python -m pytest tests/ --cov=src --cov-report=xml --cov-report=term || true
+      continue-on-error: true
     
     - name: Upload coverage to Codecov
+      if: always()
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
         fail_ci_if_error: false
+      continue-on-error: true
 
 
