--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,18 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10' # 指定單一穩定版本
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Verify installation
+      run: |
+        python --version
+        python -c "import pandas; import pytest; print('Dependencies OK')"
+
     - name: Run tests with pytest
       run: |
-        # 運行所有測試
-        python -m pytest tests/
+        python -m pytest tests/ -v
